<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.infostickets.InfosRackageActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        style="@style/title"
        android:text="Incident"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_marginTop="3dp"
        android:background="@color/black">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="30dp"
            android:text="@string/num_ro_de_ticket"
            android:textColor="@color/orange"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/nTicket"
            android:layout_width="150dp"
            style="@style/edittext"
            android:layout_height="wrap_content"
            android:layout_gravity="right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="16dp"
            android:text="@string/r_alisateur_du_ticket"
            android:textColor="@color/orange"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/realTicket"
            android:layout_width="150dp"
            style="@style/edittext"
            android:layout_height="wrap_content"
            android:layout_gravity="right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="16dp"
            android:text="@string/nom_de_la_salle"
            android:textColor="@color/orange"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/nomSalle"
            android:layout_width="150dp"
            style="@style/edittext"
            android:layout_height="wrap_content"
            android:layout_gravity="right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="16dp"
            android:text="@string/callepinage_de_la_baie"
            android:textColor="@color/orange"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/callBaie"
            android:layout_width="150dp"
            style="@style/edittext"
            android:layout_height="wrap_content"
            android:layout_gravity="right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="16dp"
            android:text="@string/n_26e_de_l_quipement"
            android:textColor="@color/orange"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/numEquip"
            android:layout_width="150dp"
            style="@style/edittext"
            android:layout_height="wrap_content"
            android:layout_gravity="right" />

        <Button
            android:id="@+id/start"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="42dp"
            android:layout_marginTop="40dp"
            android:text="@string/commencer_la_recette"
            android:textColor="@color/white" />

    </LinearLayout>
</LinearLayout>